--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
+    <link rel="stylesheet" href="style.css" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -25,5 +26,6 @@
   </head>
   <body>
     <div id="root"></div>
+
   </body>
 </html>
